@@ -1,6 +1,8 @@
 0.20 - ??/09/2007
 
 	- add MUC support
+	- add XMPP Ping support, the lagmeter is working now if it's supported
+	by the server
 	- add status window to show contact's presence in a window, setting
 	"xmpp_status_window" to enable it
 	- add raw window, setting "xmpp_raw_window" to enable it
